--- a/.env
+++ b/.env
@@ -1,9 +1,6 @@
-MONGO_USERNAME=admin
-MONGO_PASSWORD=password
-MONGO_HOST=localhost:27017
+MONGO_URL=mongodb+srv://testuser:testpassword@testcluster.mongodb.net/?retryWrites=true&w=1
 
 KAFKA_BROKER=localhost:9092
-KAFKA_TOPIC=measurements
 
 DATA_FILE=data/data.json
 
