add requirements files, update deployment instructions

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URL=mongodb+srv://testuser:testpassword@testcluster.mongodb.net/?retryWrites=true&w=1
+MONGO_URL=mongodb+srv://testuser:testpassword@mysimbdp-coredms-cluste.kfuy4tk.mongodb.net/?retryWrites=true&w=1
 
 KAFKA_BROKER=localhost:9092
 
